--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: Xingchen Blog
 SEOTitle: 星辰的博客 | Xingchen Blog
 header-img: img/post-bg-desk.jpg
 email: Xingchen.luo@mail.mcgill.com
-description: "Every failure is leading towards success."
-keyword: "BY, BY Blog, 柏荧的博客, qiubaiying, 邱柏荧, iOS, Apple, iPhone"
+description: "A man is least himself when he talks in his own person. Give him a mask and he will tell you the truth."
+keyword: "XC, XC Blog, 星辰的博客, XingchenLuo, 骆星辰, Apple, iPhone"
 url: "http://tiger7789.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/qiubaiying/qiubaiying.github.io.git" # you code repository
