--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Xingchen Blog
 SEOTitle: 星辰的博客 | Xingchen Blog
-header-img: img/beauty1.jpg
+header-img: img/post-bg-desk.jpg
 email: Xingchen.luo@mail.mcgill.com
 description: "A man is least himself when he talks in his own person. Give him a mask and he will tell you the truth."
 keyword: "XC, XC Blog, 星辰的博客, XingchenLuo, 骆星辰, Apple, iPhone"
