--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Cassiel Huo's Blog
 SEOTitle: Cassiel Blog | Cassiel's 碎碎念
-header-img: img/front_cover.JPG
+header-img: img/front_cover.jpg
 email: jiachen.huo@mail.mcgill.com
 description: "Finish the work then play super hard!"
 keyword: "BY, BY Blog, 柏荧的博客, qiubaiying, 邱柏荧, iOS, Apple, iPhone"
