--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ github_repo: "https://github.com/Cassiel-H/Cassiel-H.github.io" # you code repos
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "梦想是养5只大狗狗🐶"
+sidebar-about-description: "梦想是和lxc养5只大狗狗🐶"
 sidebar-avatar: /img/cassiel.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
