--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ github_repo: "https://github.com/qiubaiying/qiubaiying.github.io.git" # you code
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "Goals determine what you going to be!"
+sidebar-about-description: "You have to believe in yourself when no one else does – that makes you a winner right there!"
 sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
@@ -19,11 +19,11 @@ sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's us
 # SNS settings
 RSS: false
 # weibo_username:     qiubaiying
-# zhihu_username:     qiubaiying
+# zhihu_username:     
 github_username:    tiger7789
 #facebook_username:  baiying.qiu.7
 #jianshu_username:   e71990ada2fd
-twitter_username:   Lnsey16
+#twitter_username:   Lnsey16
 
 
 
@@ -57,17 +57,8 @@ kramdown:
 
 # 评论系统
 # Disqus（https://disqus.com/）
-disqus_username: disqus_gVQ5E0egVw
+disqus_username: samluo1216
 
-# Gitalk
-gitalk:
-  enable: true    #是否开启Gitalk评论
-  clientID: f2c84e7629bb1446c1a4                            #生成的clientID
-  clientSecret: ca6d6139d1e1b8c43f8b2e19492ddcac8b322d0d    #生成的clientSecret
-  repo: qiubaiying.github.io    #仓库名称
-  owner: qiubaiying    #github用户名
-  admin: qiubaiying
-  distractionFreeMode: true #是否启用类似FB的阴影遮罩
 
 
 # 统计
@@ -99,13 +90,16 @@ service-worker: true
 # Friends
 friends: [
     {
-        title: "HJC",
+        title: "Cassiel",
         href: "https://cassiel-h.github.io/"
     },{
         title: "Apple",
         href: "https://apple.com"
     },{
-        title: "Apple Developer",
-        href: "https://developer.apple.com/"
+        title: "Tesla",
+        href: "https://tesla.com/"
+    },{
+    title: "Yahoo Finance",
+        href: "https://ca.finance.yahoo.com/"
     }
 ]
