--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ email: Xingchen.luo@mail.mcgill.com
 description: "A man is least himself when he talks in his own person. Give him a mask and he will tell you the truth."
 keyword: "XC, XC Blog, 星辰的博客, XingchenLuo, 骆星辰, Apple, iPhone"
 url: "http://tiger7789.github.io"          # your host, for absolute URL
-baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
+baseurl: ""      # for example, '/blog' sif your blog hosted on 'host/blog'
 github_repo: "https://github.com/tiger7789/tiger7789.github.io.git" # you code repository
 
 # Sidebar settings
