--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,10 @@ github_username:    tiger7789
 #facebook_username:  
 #jianshu_username:   
 #twitter_username:   
-#weixin_username:  /img/self-side.jpeg  
+weixin_username:  /img/self-side.jpeg 
+Linkedin_username: xingchen-luo-1216lxc
+
+
 
 
 
